New Brazilian Portuguese translation

--- a/qof/po/ChangeLog
+++ b/qof/po/ChangeLog
@@ -1,3 +1,11 @@
+2006-09-30   J. Victor D. Martins <jvdm@sdf.lonestar.org>
+
+	* pt_BR.po : New Brazilian Portuguese translation.
+
+2006-09-30  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po : Updated Vietnamese translation.
+
 2006-09-29  Tedi Heriyanto <tedi_heriyanto@yahoo.com>
 
 	* id.po : New Indonesian translation.
