--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-30  Neil Williams <linux@codehelp.co.uk>
+
+	* configure.in : Support new Brazilian
+	Portuguese and Indonesian translations.
+
 2006-09-21  Neil Williams <linux@codehelp.co.uk>
 
 	* backend/sqlite/qof-sqlite.c : Check path is
