--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -2,8 +2,9 @@ qof (0.7.2-1) unstable; urgency=low
 
   * New upstream release.
   - upgrade binNMU support to avoid deprecated Source-Version
+  * Change my email address to new Debian one.
 
- -- Neil Williams <linux@codehelp.co.uk>  Mon, 18 Sep 2006 21:00:14 +0100
+ -- Neil Williams <codehelp@debian.org>  Mon, 18 Sep 2006 21:00:14 +0100
 
 qof (0.7.1-3) unstable; urgency=low
 
