--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,3 +1,11 @@
+2007-02-22  Neil Williams <linux@codehelp.co.uk>
+
+	* Makefile.am : prevent code churn in the 
+	translation files.
+	* qof/qoferror.c : fix QofError handling 
+	to ensure filenames are used when requested
+	and missing values are handled without a crash.
+
 2006-12-26  Neil Williams <linux@codehelp.co.uk>
 
 	* backend/sqlite/qof-sqlite.c : Don't try to
