--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,3 +1,10 @@
+2007-06-30  Neil Williams <linux@codehelp.co.uk>
+
+	* backend/sqlite/qof-sqlite.c : Ensure the current
+	QofParam is always available to the SQLite backend.
+	* Bump to 0.7.3
+	* Fix POTFILES.skip
+
 2007-05-21  Neil Williams <linux@codehelp.co.uk>
 
 	* qof/qof-util.h,
