--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -1,8 +1,9 @@
 qof (0.7.3-1) unstable; urgency=low
 
   * New upstream release
+  * debian/control: migrate doxygen to Build-Depends-Indep
 
- -- Neil Williams <codehelp@debian.org>  Sat, 30 Jun 2007 14:16:08 +0100
+ -- Neil Williams <codehelp@debian.org>  Wed, 22 Aug 2007 13:12:22 +0100
 
 qof (0.7.2-1) unstable; urgency=low
 
