--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -2,8 +2,9 @@ qof (0.7.3-1) unstable; urgency=low
 
   * New upstream release
   * debian/control: migrate doxygen to Build-Depends-Indep
+  * debian/control: use new dpkg fields
 
- -- Neil Williams <codehelp@debian.org>  Wed, 22 Aug 2007 13:12:22 +0100
+ -- Neil Williams <codehelp@debian.org>  Sun, 16 Sep 2007 12:45:08 +0100
 
 qof (0.7.2-1) unstable; urgency=low
 
