--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -3,8 +3,9 @@ qof (0.7.3-1) unstable; urgency=low
   * New upstream release
   * debian/control: migrate doxygen to Build-Depends-Indep
   * debian/control: use new dpkg fields
+  * configure.in : tidy up use of qofsql for embedded use
 
- -- Neil Williams <codehelp@debian.org>  Sun, 16 Sep 2007 12:45:08 +0100
+ -- Neil Williams <codehelp@debian.org>  Wed, 14 Nov 2007 23:35:20 +0000
 
 qof (0.7.2-1) unstable; urgency=low
 
